<resources>
    <string name="app_name">AAAM</string>
    <string name="swtAtivar">Quer ficar legal?</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="strHoraInicial">Hora Inicial</string>
    <string name="strHoraFinal">Hora Final</string>
    <string name="strRepetir">Repetir a cada</string>
    <string name="strMinutos">minutos</string>
    <string name="btnLembrar">Me lembre!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minutos_padrao">30</string>
    <string name="pref_status">swtGeral</string>
    <string name="pref_minutos">editMinutos</string>
    <string name="pref_hora_inicial">txtHorarioInicial</string>
    <string name="pref_hora_final">txtHorarioFinal</string>
    <string name="hora_padrao">00:00</string>
    <string name="aviso_hora_inicial_depois_final">Horario inicial depois do horário final</string>
    <string name="aviso_intervalo_invalido">Intervalo inválido!</string>
    <string name="aviso_lembrete_canc">Lembrete cancelado</string>
    <string name="titulo_notificacao">Bebeu água?! Tá com sede?!</string>
    <string name="corpo_notificacao">Beba água mineral pra ficar legal!</string>
    <string name="aviso_ativado">Agora você tá legal a cada %d minutos!</string>

</resources>
